ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

01/01/08 Daniel K. O.

	* Replaced ode/config.h by odeconfig.h and plain config.h. Public
	  configuration options are now on odeconfig.h; config.h is now private.
	  odeconfig.h is generated a similar way to glibconfig.h. It will be installed
	  in a different place from the headers.
	* Replaced uintXX by uintXX_t where needed.
	* SAP space now seems to work on systems where it was previously crashing.

12/11/07 Daniel K. O.

	* Added damping and MaxAngularVel() functions.
	* Const-correctness: added const qualifier to some dWorldGet and dBodyGet
	  functions.
	* Updated the odecpp.h header.

12/07/07 Daniel K. O.

	* Removed most of the compiler warnings from Drawstuff, ODE and
	  OPCODE
	* Upgraded automake requirement to 1.10, and change some Makefile.am

12/06/07 Rodrigo

	* Modified autotools to use libtool for
	  library generation and administration
	* Removed release and debug flags for configure.in
	  CPPFLAGS, CFLAGS, CXXFLAGS should be set by the
	  user to their liking, respecting autotools policies.

11/30/07 Daniel K. O.
	* Applied patch 1813079 (moved callback)
	* Replaced moveAndRotateBody by dxStepBody in stepfast.cpp

11/10/07 david

	* Added 'Sweep and Prune' collision space.
	* New Piston joint type with demo, by Remi Ricard
	* Added build option to use 16-bit indices for OPCODE trimesh

11/03/06 david

	* Integrated Christoph Beyer's average based sampling system for body
	  disabling.

10/26/06 Francisco Leon

	* Totally refactored trimesh collision system.
	  Using GIMPACT instead of OPCODE. Now works correctly, and faster.
	  Visit http://gimpact.sourceforge.net.
	  